manifests/shared_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pinglog-namespace
  name: log-reader-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-reader-service
            port:
              number: 3022
